[fix](ABC-622): Add overflow-x hidden on parent of scrolling container

--- a/src/modules/base/activityTimeline/horizontalActivityTimeline.css
+++ b/src/modules/base/activityTimeline/horizontalActivityTimeline.css
@@ -43,3 +43,7 @@
 .avonni-activity-timeline__horizontal-timeline-scrolling-container {
     width: fit-content;
 }
+
+.avonni-activity-timeline__horizontal-timeline {
+    overflow-x: hidden;
+}
